# Database-Backup-CLI-utility

./: .gitignore  pyproject.toml  requirements.txt
db_bkup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/db-bkup/: ResQ.py  __init__.py  config.toml  entry.py  gcloud.py
